--- a/www/templates/base.html.twig
+++ b/www/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}{{title|default('Site de jeux vidéos')}}
+			{% block title %}{{title|default('Site de réservation de camping')}}
 			{% endblock %}
 		</title>
 		{# Librairie font awesome #}
@@ -14,7 +14,15 @@
 		{% endblock %}
 
 	</head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+	<body>
+		{% block menu %}
+			{% include "components/_nav.html.twig" %}
+		{% endblock %}
+		{% block body %}{% endblock %}
+
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</body>
+
 </html>
