--- a/www/templates/components/_nav.html.twig
+++ b/www/templates/components/_nav.html.twig
@@ -30,9 +30,9 @@
 						<a class="dropdown-item" href="#">Dashboard</a>
 					{% endif %}
 
-					<a class="dropdown-item" href="#">Déconnexion</a>
+					<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 				{% else %}
-					<a class="dropdown-item" href="#">Connexion</a>
+					<a class="dropdown-item" href="{{path('app_login')}}">Connexion</a>
 				{% endif %}
 			</div>
 		</div>
