Ajout du crud des équipements

--- a/www/templates/admin/dashboard.html.twig
+++ b/www/templates/admin/dashboard.html.twig
@@ -7,5 +7,11 @@
 
     <div class="action-buttons">
         <a href="#" class="btn btn-edit">Voir les locations</a>
+        <a href="#" class="btn btn-edit">Voir les types d'hébergements</a>
+        <a href="#" class="btn btn-edit">Voir les utilisateurs</a>
+        <a href="#" class="btn btn-edit">Voir les réservations</a>
+        <a href="#" class="btn btn-edit">Voir les prix par saison</a>
+        <a href="{{path('app_equipment_index')}}" class="btn btn-edit">Voir les équipements</a>
+        <a href="#" class="btn btn-edit">Voir les disponibilités</a>
     </div>
 {% endblock %}
