--- a/www/templates/components/_nav.html.twig
+++ b/www/templates/components/_nav.html.twig
@@ -28,6 +28,8 @@
 				{% if app.user %}
 					{% if is_granted('ROLE_ADMIN') %}
 						<a class="dropdown-item" href="{{path('app_admin_dashboard')}}">Dashboard</a>
+					{% else %}
+						<a class="dropdown-item" href="{{ path('app_user_edit', {'id': app.user.id}) }}">Mon compte</a>
 					{% endif %}
 
 					<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
