--- a/www/templates/user/edit.html.twig
+++ b/www/templates/user/edit.html.twig
@@ -1,13 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier le profil{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier le profil</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    {# Si l'utilisateur est admin #}
+    {% if app.user.roles[0] == 'ROLE_ADMIN' %}
+        <div class="action-buttons">
+            <a href="{{ path('app_user_index') }}" class="btn btn-back">
+                        <i class="fas fa-arrow-left"></i>
+                        Retour à la liste
+            </a>
 
-    {{ include('user/_delete_form.html.twig') }}
+            {{ include('user/_delete_form.html.twig') }}
+        </div>
+    {% else %}
+        <div class="action-buttons">
+            <a href="{{ path('app_home') }}" class="btn btn-primary">Retour à l'accueil</a>
+        </div>
+    {% endif %}
+
 {% endblock %}
