--- a/www/templates/user/index.html.twig
+++ b/www/templates/user/index.html.twig
@@ -1,45 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Index utilisateur(s){% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <div class="camping-list-container">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Username</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.firstname }}</td>
-                <td>{{ user.lastname }}</td>
-                <td>{{ user.username }}</td>
-                <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+		{% include "components/_dashboard_button.html.twig" %}
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+        <h1>Gestion des utilisateurs</h1>
+        <a href="{{path('app_user_new')}}" class="add-camping-btn">Ajouter un utilisateur</a>
+
+        {% include "/components/_table_user.html.twig" with {
+            'title': 'Administrateurs',
+            'users': roleAdmin
+        } %}
+
+        {% include "/components/_table_user.html.twig" with {
+            'title': 'Utilisateurs',
+            'users': roleUser
+        } %}
+
+        <a href="{{path('app_user_new')}}" class="add-camping-btn">Ajouter un utilisateur</a>
+
+    </div>
 {% endblock %}
