--- a/www/templates/user/show.html.twig
+++ b/www/templates/user/show.html.twig
@@ -1,46 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Utilisateur
+{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+	<h1>{{user.username}}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>Firstname</th>
-                <td>{{ user.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Lastname</th>
-                <td>{{ user.lastname }}</td>
-            </tr>
-            <tr>
-                <th>Username</th>
-                <td>{{ user.username }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<div class="card" style="width: 18rem;">
+		<img src="{{asset('images/user.png')}}" class="card-img-top" alt="photo profil">
+		<div class="card-body">
+			<h5 class="card-title">{{user.username}}</h5>
+			{{user.roles|badge_user}}
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+			<p class="card-text">{{user.email}}</p>
+		</div>
+	</div>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+	<div class="action-buttons">
+		{# Si l'utilisateur connecté est admin #}
+		{% if is_granted('ROLE_ADMIN') %}
+			<div>
+				{# suppression #}
+				{% include "user/_delete_form.html.twig" with {'button_class': 'btn btn-delete'} %}
+			</div>
+		{% endif %}
+		<div>
+			<a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-edit">Editer</a>
+		</div>
 
-    {{ include('user/_delete_form.html.twig') }}
+		{# Si l'utilisateur connecté est admin #}
+		{% if is_granted('ROLE_ADMIN') %}
+			<div>
+				<a href="{{path('app_user_index')}}" class="btn btn-back">
+					<i class="fas fa-arrow-left"></i>Retour à la liste</a>
+			</div>
+		{% else %}
+			<div>
+				<a href="{{ path('app_home') }}" class="btn btn-primary">Retour à l'accueil</a>
+			</div>
+		{% endif %}
+		
+
+	</div>
+
 {% endblock %}
