Ajout du crud des locations

--- a/www/assets/styles/reset.scss
+++ b/www/assets/styles/reset.scss
@@ -1,12 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
 
 // Déclaration des variables pour les couleurs
-$primary-bg: #1a1f36;
+$primary-bg: #340e4ab3;
 $text-light: #f0f0f0;
 $accent-color: #ff595a;
 $highlight-color: #ff7300;
 $text-muted: rgba(240, 240, 240, 0.6);
-$overlay-bg: rgba(26, 31, 54, 0.7);
+$overlay-bg: #27C7D4;
 $dashboard-color: #55aaff;
 
 body {
