--- a/www/templates/admin/dashboard.html.twig
+++ b/www/templates/admin/dashboard.html.twig
@@ -6,7 +6,7 @@
     <h1>Dashboard</h1>
 
     <div class="action-buttons">
-        <a href="#" class="btn btn-edit">Voir les locations</a>
+        <a href="{{path('app_rental_index')}}" class="btn btn-edit">Voir les locations</a>
         <a href="{{path('app_type_index')}}" class="btn btn-edit">Voir les types d'hébergements</a>
         <a href="{{path('app_user_index')}}" class="btn btn-edit">Voir les utilisateurs</a>
         <a href="#" class="btn btn-edit">Voir les réservations</a>
