Ajout du crud des disponibilités + modification de la table prix (fixture corrigée + table type corrigée)

--- a/www/templates/admin/dashboard.html.twig
+++ b/www/templates/admin/dashboard.html.twig
@@ -12,6 +12,6 @@
         <a href="#" class="btn btn-edit">Voir les réservations</a>
         <a href="{{path('app_price_index')}}" class="btn btn-edit">Voir les prix par saison</a>
         <a href="{{path('app_equipment_index')}}" class="btn btn-edit">Voir les équipements</a>
-        <a href="#" class="btn btn-edit">Voir les disponibilités</a>
+        <a href="{{path('app_availability_index')}}" class="btn btn-edit">Voir les disponibilités</a>
     </div>
 {% endblock %}
