--- a/www/templates/admin/dashboard.html.twig
+++ b/www/templates/admin/dashboard.html.twig
@@ -10,6 +10,8 @@
         <a href="{{path('app_type_index')}}" class="btn btn-edit">Voir les types d'hébergements</a>
         <a href="{{path('app_user_index')}}" class="btn btn-edit">Voir les utilisateurs</a>
         <a href="#" class="btn btn-edit">Voir les réservations</a>
+    </div>
+    <div class="action-buttons">
         <a href="{{path('app_season_index')}}" class="btn btn-edit">Voir les saisons</a>
         <a href="{{path('app_price_index')}}" class="btn btn-edit">Voir les prix par saison</a>
         <a href="{{path('app_equipment_index')}}" class="btn btn-edit">Voir les équipements</a>
