--- a/www/templates/components/_nav.html.twig
+++ b/www/templates/components/_nav.html.twig
@@ -29,7 +29,7 @@
 					{% if is_granted('ROLE_ADMIN') %}
 						<a class="dropdown-item" href="{{path('app_admin_dashboard')}}">Dashboard</a>
 					{% else %}
-						<a class="dropdown-item" href="{{ path('app_user_edit', {'id': app.user.id}) }}">Mon compte</a>
+						<a class="dropdown-item" href="{{ path('app_client_dashboard') }}">Mon compte</a>
 					{% endif %}
 
 					<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
