Ajout du crud pour Reservation + traitement des dates + nb de personnes + affichage du prix avant confirmation

--- a/www/assets/styles/reset.scss
+++ b/www/assets/styles/reset.scss
@@ -20,3 +20,11 @@ body {
     margin: 0;
     padding: 100px 0;
 }
+
+a {
+    color: $highlight-color;
+    text-decoration: none;
+    &:hover {
+        color: $accent-color;
+    }
+}
