--- a/www/templates/type/_form.html.twig
+++ b/www/templates/type/_form.html.twig
@@ -26,16 +26,9 @@
     </div>
 
     <div class="form-group">
-        {{form_label(form.prices)}}
-        <div class="console-switches">
-            {% for price in form.prices %}
-                <div class="form-switch">
-                    {{form_widget(price, {'attr': {'class': 'form-check-input'}})}}
-                    {{form_label(price, null, {'attr': {'class': 'form-check-label'}})}}
-                </div>            
-            {% endfor %}
-        </div>
-        {{form_errors(form.prices)}}
+        {{ form_label(form.price) }}
+        {{ form_widget(form.price) }}
+        {{ form_errors(form.price) }}
     </div>
 
     <button type="submit" class="btn-submit">
