--- a/www/templates/type/show.html.twig
+++ b/www/templates/type/show.html.twig
@@ -8,7 +8,7 @@
 			<img src="{{asset('images/types/' ~ type.imagePath)}}" alt="{{type.label}}">
 		</div>
         <div class="camping-detail-content">
-            <h1 class="camping-title">{{type.label|slice(0,30)}}</h1>
+            <h1 class="camping-title">{{type.label}}</h1>
             <div class="camping-info-detail mb-4">
                 <div class="info-item">
                     <span class="info-label">Nom : </span>
@@ -20,9 +20,7 @@
             <div class="camping-info-detail mb-4">
                 <div class="info-item">
                     <span class="info-label">Prix : </span>
-                    {% for price in prices %}
-                        <span class="info-value">{{price.label}} : {{(price.price/100)|number_format}}</span>
-                    {% endfor %}
+                    <span class="info-value">{{(type.price/100)|number_format}}</span>
                 </div>
             </div>
             
