--- a/www/templates/components/_type_card.html.twig
+++ b/www/templates/components/_type_card.html.twig
@@ -3,12 +3,7 @@
 	<div class="camping-info">
 		<h2 class="camping-title">{{type.label|slice(0,40)}}</h2>
 		<div class="camping-info-container">
-			<a href="#" class="btn btn-detail">Voir détail</a>
-
-			{# Si l'utilisateur est connecté #}
-			{% if app.user and not is_granted('ROLE_ADMIN') %}
-				<a href="#" class="btn btn-detail">Réserver</a>
-			{% endif %}
+			<a href="{{path('app_detail_type', {'id':type.id})}}" class="btn btn-detail">Voir détail</a>
 		</div>
 	</div>
 </div>
