--- a/www/templates/rental/show.html.twig
+++ b/www/templates/rental/show.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
 	
-    {% include 'components/_detail_rental_card.html.twig' with {'rental': rental, 'equipments': equipments, 'imageType': imageType} %}
+    {% include 'components/_detail_rental_card.html.twig' with {'rental': rental, 'equipments': equipments, 'type': type} %}
 
 {% endblock %}
