Mise en place du dashboard client + page d'affichage du résumé de ses réservations

--- a/www/templates/client/dashboard.html.twig
+++ b/www/templates/client/dashboard.html.twig
@@ -7,6 +7,6 @@
 
     <div class="action-buttons">
         <a href="{{path('app_user_show', {'id': app.user.id})}}" class="btn btn-edit">Voir mon profil</a>
-        <a href="{{path('app_reservation_index')}}" class="btn btn-edit">Voir mes réservations</a>
+        <a href="{{path('app_reservation_client_index')}}" class="btn btn-edit">Voir mes réservations</a>
     </div>
 {% endblock %}
