--- a/www/templates/user/show.html.twig
+++ b/www/templates/user/show.html.twig
@@ -36,7 +36,7 @@
 			</div>
 		{% else %}
 			<div>
-				<a href="{{ path('app_home') }}" class="btn btn-primary">Retour à l'accueil</a>
+				<a href="{{ path('app_client_dashboard') }}" class="btn btn-primary">Retour au dashboard</a>
 			</div>
 		{% endif %}
 		
