--- a/www/templates/reservation_client/index.html.twig
+++ b/www/templates/reservation_client/index.html.twig
@@ -1,20 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ReservationClientController!{% endblock %}
+{% block title %}Mes réservations{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="camping-list-container">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/src/Controller/ReservationClientController.php</code></li>
-        <li>Your template at <code>/var/www/html/templates/reservation_client/index.html.twig</code></li>
-    </ul>
-</div>
+        {% include "components/_dashboard_client_button.html.twig" %}
+
+        <h1>Mes réservations</h1>
+
+        {% include "/components/_table_reservation_client.html.twig" with {
+            'title': 'Réservations',
+            'reservations': reservations
+        } %}
+
+    </div>
 {% endblock %}
