--- a/www/templates/user/edit.html.twig
+++ b/www/templates/user/edit.html.twig
@@ -17,9 +17,12 @@
 
             {{ include('user/_delete_form.html.twig') }}
         </div>
+        <div class="action-buttons">
+            <a href="{{ path('app_admin_dashboard') }}" class="btn btn-primary">Retour au dashboard</a>
+        </div>
     {% else %}
         <div class="action-buttons">
-            <a href="{{ path('app_home') }}" class="btn btn-primary">Retour à l'accueil</a>
+            <a href="{{ path('app_client_dashboard') }}" class="btn btn-primary">Retour au dashboard</a>
         </div>
     {% endif %}
 
