--- a/www/templates/components/_nav.html.twig
+++ b/www/templates/components/_nav.html.twig
@@ -35,6 +35,7 @@
 					<a class="dropdown-item" href="{{path('app_logout')}}">Déconnexion</a>
 				{% else %}
 					<a class="dropdown-item" href="{{path('app_login')}}">Connexion</a>
+					<a class="dropdown-item" href="{{path('app_register')}}">Inscription</a>
 				{% endif %}
 			</div>
 		</div>
