--- a/www/templates/components/_table_reservation_client.html.twig
+++ b/www/templates/components/_table_reservation_client.html.twig
@@ -32,8 +32,7 @@
                     {% endif %}
                 <td>
                 <div class="camping-actions">
-                    <a href="{{path('app_reservation_show', {'id': reservation.id})}}" class="view-link">Voir</a>
-                    <a href="{{path('app_reservation_edit', {'id': reservation.id})}}" class="edit-link">Editer</a>
+                    <a href="{{path('app_reservation_client_show', {'id': reservation.id})}}" class="view-link">Voir</a>
                 </div>                    
                 </td>
             </tr>
