--- a/www/templates/type/edit.html.twig
+++ b/www/templates/type/edit.html.twig
@@ -14,6 +14,6 @@
             <i class="fas fa-arrow-left"></i>
             Retour à la liste
         </a>
-        {{ include('type/_delete_form.html.twig') }}
+        {# {{ include('type/_delete_form.html.twig') }} #}
     </div>
 {% endblock %}
