--- a/www/templates/user/edit.html.twig
+++ b/www/templates/user/edit.html.twig
@@ -15,7 +15,7 @@
                         Retour à la liste
             </a>
 
-            {{ include('user/_delete_form.html.twig') }}
+            {# {{ include('user/_delete_form.html.twig') }} #}
         </div>
         <div class="action-buttons">
             <a href="{{ path('app_admin_dashboard') }}" class="btn btn-primary">Retour au dashboard</a>
