--- a/www/templates/components/_table_user.html.twig
+++ b/www/templates/components/_table_user.html.twig
@@ -6,6 +6,7 @@
                     <th>Email</th>
                     <th>Role</th>
                     <th>Nom d'utilisateur</th>
+                    <th>Actif</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -16,6 +17,7 @@
                     <td>{{ user.email }}</td>
                     <td>{{ user.roles|badge_user }}</td>
                     <td>{{ user.username }}</td>
+                    <td>{{ user.isActive ? 'Oui' : 'Non' }}</td>
                     <td>
                         <div class="camping-actions">
                             <a href="{{path('app_user_show', {'id': user.id})}}" class="view-link">Voir</a>
