Traitement du cas où une réservation se fait sans qu'il existe de saison + ajout de la suppression pour availability et season

--- a/www/templates/availability/show.html.twig
+++ b/www/templates/availability/show.html.twig
@@ -30,7 +30,7 @@
 
             <div class="action-buttons">
                 <div>
-                    {# {% include "availability/_delete_form.html.twig" with {'button_class': 'btn btn-delete'} %} #}
+                    {% include "availability/_delete_form.html.twig" with {'button_class': 'btn btn-delete'} %}
                 </div>
                 <div>
                     <a href="{{ path('app_availability_edit', {'id': availability.id}) }}" class="btn btn-edit">Editer</a>
