--- a/www/templates/availability/edit.html.twig
+++ b/www/templates/availability/edit.html.twig
@@ -12,6 +12,6 @@
             <i class="fas fa-arrow-left"></i>
             Retour à la liste
         </a>
-        {# {{ include('availability/_delete_form.html.twig') }} #}
+        {{ include('availability/_delete_form.html.twig') }}
     </div>
 {% endblock %}
