--- a/www/templates/season/edit.html.twig
+++ b/www/templates/season/edit.html.twig
@@ -14,6 +14,6 @@
             <i class="fas fa-arrow-left"></i>
             Retour à la liste
         </a>
-        {# {{ include('season/_delete_form.html.twig') }} #}
+        {{ include('season/_delete_form.html.twig') }}
     </div>
 {% endblock %}
