--- a/www/templates/season/show.html.twig
+++ b/www/templates/season/show.html.twig
@@ -35,7 +35,7 @@
 
     <div class="action-buttons">
 		<div>
-			{# {% include "season/_delete_form.html.twig" with {'button_class': 'btn btn-delete'} %} #}
+			{% include "season/_delete_form.html.twig" with {'button_class': 'btn btn-delete'} %}
 		</div>
 		<div>
 			<a href="{{ path('app_season_edit', {'id': season.id}) }}" class="btn btn-edit">Editer</a>
