Gestion des messages de succès et d'erreurs

--- a/www/templates/base.html.twig
+++ b/www/templates/base.html.twig
@@ -21,6 +21,12 @@
             </div>
         {% endfor %}
 
+		{% for message in app.flashes('danger') %}
+			<div class="alert alert-danger">
+				{{ message }}
+			</div>
+		{% endfor %}
+
 		{% block menu %}
 			{% include "components/_nav.html.twig" %}
 		{% endblock %}
