--- a/www/templates/components/_table_user.html.twig
+++ b/www/templates/components/_table_user.html.twig
@@ -6,6 +6,8 @@
                     <th>Email</th>
                     <th>Role</th>
                     <th>Nom d'utilisateur</th>
+                    <th>Prénom</th>
+                    <th>Nom</th>
                     <th>Actif</th>
                     <th>Actions</th>
                 </tr>
@@ -17,6 +19,8 @@
                     <td>{{ user.email }}</td>
                     <td>{{ user.roles|badge_user }}</td>
                     <td>{{ user.username }}</td>
+                    <td>{{ user.firstname }}</td>
+                    <td>{{ user.lastname }}</td>
                     <td>{{ user.isActive ? 'Oui' : 'Non' }}</td>
                     <td>
                         <div class="camping-actions">
