--- a/www/templates/components/_nav.html.twig
+++ b/www/templates/components/_nav.html.twig
@@ -1,3 +1,5 @@
+{# barre de navigation #}
+
 <nav class='navbar navbar-expand-lg py-4 col-sm-12'>
 	<button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation'>
 		<span class='navbar-toggle-icon'></span>
