Correction de la vérification des dates pour la réservation

--- a/www/templates/components/_table_reservation.html.twig
+++ b/www/templates/components/_table_reservation.html.twig
@@ -41,7 +41,7 @@
                 <td>
                 <div class="camping-actions">
                     <a href="{{path('app_reservation_show', {'id': reservation.id})}}" class="view-link">Voir</a>
-                    <a href="{{path('app_reservation_edit', {'id': reservation.id})}}" class="edit-link">Editer</a>
+                    {# <a href="{{path('app_reservation_edit', {'id': reservation.id})}}" class="edit-link">Editer</a> #}
                 </div>                    
                 </td>
             </tr>
