Retrait des use inutiles

--- a/www/templates/reservation/client/_form.html.twig
+++ b/www/templates/reservation/client/_form.html.twig
@@ -38,7 +38,7 @@
         {{ form_widget(form.calculate) }}
     </div>
 
-    {# Bouton pour confirmer la réservation (affiché seulement si le prix est défini) #}
+    {# Bouton pour confirmer la réservation #}
     <div class="form-group">
         {{ form_label(form.confirm) }}
         {{ form_widget(form.confirm) }}
