Modification de la vue reservation client show (bouton annuler non affiché si la réservation est déjà annulée)

--- a/www/templates/reservation/client/show.html.twig
+++ b/www/templates/reservation/client/show.html.twig
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            {% if (isCancelable) %}
+            {% if (isCancelable and reservation.status == 1) %}
                 <div class="action-buttons">
                     {% include "reservation/client/_cancel_form.html.twig" %}
                 </div>
